--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>{{Denim Corner}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+<header>
+
+</header>
+  
   <body>
+
     {{{body}}}
+
+    
   </body>
 </html>
