updated the text that will post on the index file if the route works

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
 <h1> Denim Corner </h1>
 <p>Welcome to: Fashion Curator Capital</p>
+<h2>Hey this is my home page, anything that posts here is my homepage</h2>
