--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{Denim Corner}}</title>
+    <title>{{Title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 <header>
