--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -16,12 +16,12 @@
   <div class="user-info">
     <div class="button-container">
       
-    </div>
+    
     <div>Username:
       <strong>{{user.username}}</strong>
     </div>
     <div>instagram:@
-      <strong>{{user.instagram}}</strong>
+      <strong>{{user.Userinstagram}}</strong>
     </div>
      <div>twitter:@
       <strong>{{user.twitter}}</strong>
@@ -35,7 +35,7 @@
   
      <div>Whats your motto?:
       <strong>{{user.motto}}</strong>
-    
+    </div>
 
 
     <div class="button primary">
