--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,11 +2,24 @@
 <html>
   <head>
     <title>{{Title}}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 <header>
-
+  <ul>
+  <li><a class="active" href="/">Home</a></li>
+  <li><a href="#news">Contributors</a></li>
+  <li><a href="#contact">Join Us</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 </header>
+<div class="hero-image">
+  <div class="hero-text">
+    <h1 style="font-size:50px">Denim City</h1>
+  </div>
+</div>
+
   
   <body>
 
@@ -14,4 +27,6 @@
 
     
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <!--Bootstrap 4-->
 </html>
