--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   padding: 50px;
   Font-Family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   
@@ -13,4 +13,125 @@ a {
   width: 200px;
   border-radius: 49%;
   background: white;
+} */ 
+/* the navigation bar */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+/* for the hero image background  */
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.hero-image {
+background-image: url("https://i.imgur.com/CBWEmLR.jpg");
+height: 50%;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+}
+
+.hero-text {
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: black;
+opacity:1;
+}
+
+
+
+
+/* profiler card */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  display:flex;
+  
+}
+
+.profile-card-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.user-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0px 30px;
+  margin-bottom: 60px;
+  background-color: white;
+  width: 250px;
+  min-width: 200px;
+  height: 320px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.25s ease;
+}
+
+.user-cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  padding: 40px 0;
+}
+
+.user-card img {
+  height: 200px;
+  width: 200px;
+  /* border-radius: 49%; */
+  background: white;
+  
+}
+
+
+.user-container {
+  display: flex;
+  max-width: 750px;
+}
+
+.user-container img {
+  height: 256px;
+  width: 256px;
+}
+
+.user-info {
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
