--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,6 +1,5 @@
-<div class="HomeBtn">
-  <a href="/">Go Home</a> /
-</div>
+<body>
+  
 
 
 
@@ -37,6 +36,15 @@
       <strong>{{user.motto}}</strong>
     </div>
 
+    {{!-- <div class="gifts">
+   {{#each .giftsToReturn}}
+     <div class="gift"> --}}
+       
+         <h1>can you see me</h1>
+       {{!-- </a>
+     </div>
+   {{/each}}
+ </div> --}}
 
     <div class="button primary">
         <a href="/users/{{user._id}}/edit">Edit Me</a>
@@ -47,5 +55,10 @@
     <div class="visit-store">
       <a href="/users/{{user._id}}/influencer">Influenced By List</a>
     </div>
+    <div class="style">
+      <a href="/users/{{../userId}}/influencer/{{../influencerId}}/stle/{{this._id}}">
+    </div>
   </div>
 </div>
+
+</body>
