making changes to fix

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,8 +8,8 @@
   </head>
 <header>
   <ul>
-  <li><a class="active" href="/">Home</a></li>
-  <li><a href="#news">Contributors</a></li>
+  <li><a class="active" href="/users">Home</a></li>
+  <li><a href="/users">Contributors</a></li>
   <li><a href="#contact">Join Us</a></li>
   <li><a href="#about">About</a></li>
 </ul>
