--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -1,5 +1,8 @@
+<body>
+  
+
 <div class="stepper">
-  <a href="/users">Home</a> /
+  <a href="/users"></a>Home</a> /
   <a href="/users/{{user._id}}">Profile</a> / Edit Contributer Profile
 </div>
 
@@ -56,3 +59,5 @@
     </form>
   </div>
 </div>
+
+</body>
