attempting to get seeds show page

--- a/views/style/index.hbs
+++ b/views/style/index.hbs
@@ -18,7 +18,10 @@
             <div class='band-photo'>
                 {{#if this.img1}}
                 <img src="{{this.img1}}" alt="{{this.img1}}'s profile pic"> {{else}}
-                <img src="https://media.pri.org/s3fs-public/styles/open_graph/public/story/images/Screen%20Shot%202016-07-26%20at%2012.51.16%20AM.png?itok=CbAJFbIf" alt="{{this.bandName}}'s profile pic"> {{/if}}
+                <img src="https://avedanos.com/wp-content/uploads/2015/06/bacon.jpg" alt="{{this.stlye}}'s profile pic"> {{/if}}
+                {{#if this.img2}}
+                <img src="{{this.img2}}" alt="{{this.img2}}'s profile pic"> {{else}}
+                <img src="https://avedanos.com/wp-content/uploads/2015/06/bacon.jpg" alt="{{this.style}}'s profile pic"> {{/if}}
             </div>
            right here
         </a>
