--- a/views/influencer/new.hbs
+++ b/views/influencer/new.hbs
@@ -1,7 +1,11 @@
 <div class="stepper">
-  <a href="/users">Home</a> /
-  <a href="/users/{{userId}}">Profile</a> /
-  <a href="/users/{{userId}}/influencer">Influencers</a> / New Influencer
+  <a href="/users">Home</a> 
+  <div>
+  <a href="/users/{{userId}}">Profile</a>
+  </div>
+  <div>
+  <a href="/users/{{userId}}/influencer">Back</a> 
+</div>
 </div>
 
 <div class="card">
@@ -37,3 +41,4 @@
     </form>
   </div>
 </div>
+
