--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -2,8 +2,11 @@
   
 
 <div class="stepper">
-  <a href="/users"></a>Home</a> /
-  <a href="/users/{{user._id}}">Profile</a> / Edit Contributer Profile
+  <a href="/users"></a>Home</a> 
+  </div>
+  <div>
+  <a href="/users/{{user._id}}">Profile</a>
+  </div> 
 </div>
 
 <div class="card">
