--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,4 +1,4 @@
-<body>
+<body class="indexPagePic">
   
 
 <div class="stepper">
@@ -20,7 +20,7 @@
         {{/if}}
       </div>
       <div class="profile-name">
-        This is: {{this.lastName}},{{this.firstName}}
+        This is:{{this.firstName}}{{this.lastName}},
        <div class="contact">
          <p><button>View Pofile</button></p>
        </div>
