--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,10 @@
 
+
+
+img {
+  max-height: 600px;
+    max-width: 800px;
+}
 /* the navigation bar */
 ul {
   list-style-type: none;
@@ -27,15 +33,18 @@ li a:hover {
 body, html {
   height: 100%;
   margin: 0;
+  background-color:rgb(220, 214, 205);
 }
 
 .hero-image {
 background-image: url("https://i.imgur.com/CBWEmLR.jpg");
-height: 50%;
+height: 30%;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 position: relative;
+opacity: .5;
+
 }
 
 .hero-text {
