removed home button, the one in the navBar works. Refactored a back button to go back to the users page

--- a/views/influencer/index.hbs
+++ b/views/influencer/index.hbs
@@ -1,7 +1,7 @@
-<div class="stepper">
-  <a href="/users">Hme</a> 
-<div>
+
+ <button>
   <a href="/users/{{userId}}">Back</a> 
+ </button>  
   </div>
 </div>
 
