removed teh @ symbol from line 22 and 25

--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -19,10 +19,10 @@
     <div>Username:
       <strong>{{user.username}}</strong>
     </div>
-    <div>instagram:@
+    <div>instagram:
       <strong>{{user.Userinstagram}}</strong>
     </div>
-     <div>twitter:@
+     <div>twitter:
       <strong>{{user.twitter}}</strong>
     </div>
      <div>Currently living in:
