--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -11,7 +11,7 @@
 
 <div class="card">
 
-  <h2>Editting Contributer Profile</h2>
+  <h2>Editting {{user.username}}</h2>
   <div>
     <form action="/users/{{user._id}}?_method=PUT" method="POST">
       <div class="form-input">
