updated and modified project 2 to be mobile friendly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -144,9 +144,7 @@ h1 {
 }
 
 @media screen and (max-width:700px) {
-  ul {
-    background-color: red;
-    width: 200px;
-    height: 200px;
+  .nav-link {
+    color:red;
   }
 }
