--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,10 +8,10 @@
   </head>
 <header>
   <ul>
-  <li><a class="active" href="/users">Home</a></li>
-  <li><a href="/users">Contributors</a></li>
-  <li><a href="#contact">Join Us</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active nav-link" href="/users">Home</a></li>
+  <li><a class="nav-link" href="/users">Contributors</a></li>
+  <li><a class="nav-link" href="#contact">Join Us</a></li>
+  <li><a class="nav-link" href="#about">About</a></li>
 </ul>
 </header>
 <div class="hero-image">
